--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,9 @@
 }
 .btn {
     margin: 20px;
-    border: 5px solid green;
+    border: 10px solid green;
     background-color: blue;
+    border-radius: 10px;
     padding: 10px;
     font-size: 50px;
     font-weight: bold;
