--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,18 @@
 }
 .btn {
     margin: 20px;
-    border: 10px solid green;
     background-color: blue;
     border-radius: 10px;
-    padding: 10px;
+    padding: 20px;
+    font-size: 50px;
+    font-weight: bold;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.btnTwo {
+    margin: 20px;
+    background-color: blue;
+    border-radius: 10px;
+    padding: 20px;
     font-size: 50px;
     font-weight: bold;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
